--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build Project
-        run: npm run build
+        run: npm vite build
 
       - name: Copy Manifest to Dist
         # We manually ensure manifest is in the build folder
